--- a/auto-repair-shop-website/index.html
+++ b/auto-repair-shop-website/index.html
@@ -86,7 +86,7 @@
     <section class="second-footer"> 
     <div class="sec-f-first"> 
     <p> Подписывайся на нас</p>
-    <p> Приложение BESTSERVICE</p> 
+    <p class="apps"> Приложение BESTSERVICE</p> 
 </div>
     <div class="sec-f-second">
         <div class="fir-icons">
