--- a/auto-repair-shop-website/index.html
+++ b/auto-repair-shop-website/index.html
@@ -13,9 +13,11 @@
     <meta property="og:title" content="BEST SERVICE" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://miktar.github.io/auto-repair-shop-website/" />
-    <meta property="og:image" content="images/car-remove.png" />
+    <meta property="og:image" content="imagehttps://images.unsplash.com/photo-1599474151975-1f978922fa02?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTB8fGNhciUyMG1lY2hhbmljfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" />
     <meta property="og:description" content="ЛИДЕРЫ В ОБЛАСТИ РЕМОНТА АВТО" />
     <meta property="og:site_name" content="Профессионалы" />
+  
+     
 
     <link rel="icon" href="images/car-remove.png">
 </head>
