changed titles and some js on message exchange

--- a/js/js-message-exchanges/index.html
+++ b/js/js-message-exchanges/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
         rel="stylesheet">
-    <title>Document</title>
+    <title>Message  exchange</title>
 </head>
 <body>
     <header>  <h1 id="heading"> Message exchange</h1>  </header>
