update js files

--- a/ToDo-List-js/index.html
+++ b/ToDo-List-js/index.html
@@ -15,6 +15,11 @@
             <li>"delete" - Remove Specific Todo</li>
             <li>"quit" - Quit App</li>
         </ul>
+        <div>
+            <p id="fp"></p>
+            <p id="p"> </p>
+            <p id="lp"></p>
+        </div>
     </main>
     <script src="scripts/main.js"></script>
 </body>
