--- a/Cv-elec/html/work.html
+++ b/Cv-elec/html/work.html
@@ -36,7 +36,7 @@
 
     <a href="../images/angers.png" target="_blank"> <img id="particulier" src="../images/angers.png" alt="particulier"><div id="text-particulier"> Tableau particulier</div> </a>
 
-    <a href="../images/boites.png" target="_blank"> <img id="boites" src="../images/boites.png" alt="boites"> <div id="text-boites"> Batiment Hermoine / 2 lions</div> </a>
+    <a href="../images/forest.jpg" target="_blank"> <img id="boites" src="../images/forest.jpg" alt="boites"> <div id="text-boites"> Tours centre / rue Emile Zola</div> </a>
 
     <a href="../images/baie.png" target="_blank"> <img id="baie" src="../images/baie.png" alt="baie"><div id="text-baie"> Conseil Dép. / Fontaines</div>  </a>
 
