--- a/letter-count/index.html
+++ b/letter-count/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Онлайн счетчик символов</title>
+    <title>Онлайн счетчик символов!</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/styles.scss">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <section class="first-section">
             
             <textarea type="text" id="textareaID" placeholder="Введите/вставьте текс сюда:"></textarea>
-             <button onclick="myFunction()">Посчитать количество символов</button>
+             <button onclick="myFunction()">Посчитать количество символов!</button>
             <p id="result"></p>
             
         </section>
