new img and starting article part

--- a/agence-immo/index.html
+++ b/agence-immo/index.html
@@ -37,6 +37,41 @@
     
     
     </header>
+
+
+    <article>
+        <div class="open-doors">
+            <div class="open-doors-intro">
+                <p>Portes ouvertes!</p>
+                <img src="images/house-in-progress.jpg" alt="house construction">
+            </div>
+            <div class="open-doors-image">  
+                <img src="images/city-at-night.jpg" alt="">
+            </div>
+        </div>
+        <h3 class="large-choise">Large choix! Prix abordable!</h3>
+        <div class="pub">
+            <div class="pub-first"></div>
+            <div class="pub-second"></div>
+            <div class="pub-third"></div>
+            <div class="pub-fourth"></div>
+
+
+
+        </div>
+
+
+
+
+
+
+</article>
+
+<footer></footer>
+
+
+
+
 </body>
 <script src="scripts/main.js"></script>
 </html>
