--- a/agence-immo/index.html
+++ b/agence-immo/index.html
@@ -43,10 +43,10 @@
         <div class="open-doors">
             <div class="open-doors-intro">
                 <p>Portes ouvertes!</p>
-                <img src="images/house-in-progress.jpg" alt="house construction">
+                <img src="images/house-in-progress.jpg" alt="house in construction">
             </div>
             <div class="open-doors-image">  
-                <img src="images/city-at-night.jpg" alt="">
+                <img src="images/city-at-night.jpg" alt="city at night">
             </div>
         </div>
         <h3 class="large-choise">Large choix! Prix abordable!</h3>
