start actricle, images and text

--- a/agence-immo/index.html
+++ b/agence-immo/index.html
@@ -79,14 +79,18 @@
 
 
             <div class="pub-first">
-                <div>
-
+                <div class="first-first">
+                    <img src="images/loc-1.jpg" alt="beau appart">
                 </div>
 
 
-                
-                <div>
 
+                <div class="first-second">
+                    <p>Новые дома в аренду
+                        Это текст. Нажмите один раз и выберите «Редактировать текст» или просто кликните дважды,
+                         чтобы добавить свой текст и настроить шрифт. Здесь вы можете рассказать посетителям подробнее 
+                         о себе. Чтобы удалить этот текст, нажмите один раз и выберите значок «Корзина».
+                    </p>
                 </div>
 
 
@@ -95,19 +99,19 @@
 
             </div>
 
-
-
-
-
-
-
-
-
-
-
             <div class="pub-second">
 
 
+                <div class="second-first">
+                    <img src="images/villa.jpg" alt="">
+                </div>
+
+                <div class="second-second">
+                    <p>Загородные дома
+                        Это текст. Нажмите один раз и выберите «Редактировать текст» или просто кликните дважды, чтобы добавить
+                         свой текст и настроить шрифт. Здесь вы можете рассказать посетителям подробнее о себе.
+                    </p>
+                </div>
 
 
             </div>
@@ -125,9 +129,15 @@
 
 
             <div class="pub-third">
-
-
-
+                    <div class="third-first">
+                        <img src="images/dream-house.jpeg" alt="beautiful house">
+                    </div>
+                    <div class="third-second">
+                        <p>Новинки
+                            Это текст. Нажмите один раз и выберите «Редактировать текст» или просто кликните дважды, чтобы добавить 
+                            свой текст и настроить шрифт. Здесь вы можете рассказать посетителям подробнее о себе. Чтобы удалить этот
+                             текст, нажмите один раз и выберите значок «Корзина».</p>
+                    </div>
 
             </div>
 
@@ -142,7 +152,7 @@
 
             <div class="pub-fourth">
 
-
+                <img src="images/popular-1.jpg" alt="">
 
 
             </div>
