added animation iframe load

--- a/agence-immo/html/main.html
+++ b/agence-immo/html/main.html
@@ -24,6 +24,8 @@
 
     <script src="https://kit.fontawesome.com/9e9fe7acb9.js" crossorigin="anonymous"></script>
 </head>
+ <body>
+     
  
     <div class="open-doors">
         <div class="open-doors-intro">
@@ -126,6 +128,6 @@
         </div>
     
     </div>
-
+</body>
 <script src="../scripts/main.js"></script>
 </html>
