--- a/agence-immo/index.html
+++ b/agence-immo/index.html
@@ -38,10 +38,10 @@
         </div>
 
         <div class="third-hed">
-            <div class="hrefs-hed"> <a href="" target="iframe_a">Accueil </a>  </div>
-            <div class="hrefs-hed"> <a href="" target="iframe_a">Location</a> </div>
-            <div class="hrefs-hed"> <a href="" target="iframe_a">A vendre</a> </div>
-            <div class="hrefs-hed"> <a href="" target="iframe_a">Contacts</a> </div>
+            <div class="hrefs-hed"> <a href="html/main.html" target="iframe_a">Accueil </a>  </div>
+            <div class="hrefs-hed"> <a href="html/location.html" target="iframe_a">Location</a> </div>
+            <div class="hrefs-hed"> <a href="html/acheter.html" target="iframe_a">A vendre</a> </div>
+            <div class="hrefs-hed"> <a href="html/contacts.html" target="iframe_a">Contacts</a> </div>
         </div>
 
 
@@ -49,7 +49,7 @@
 
 
     <main>
-        <iframe src="html/main.html" name="iframe_a"></iframe>
+        <iframe src="html/main.html" name="iframe_a" id="my-frame"></iframe>
     </main>
 
     <footer>
