--- a/agence-immo/html/main.html
+++ b/agence-immo/html/main.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="open-doors-image">
-            <img src="../images/city-at-night.jpg" alt="city at night">
+            <img src="../images/paris.jpg" alt="city at night">
         </div>
     </div>
     <h3 class="large-choise">Large choix! Prix abordable!</h3>
