create sun and trees

--- a/picture only css/index.html
+++ b/picture only css/index.html
@@ -9,9 +9,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="city-back">
-
-
+    <div class="sky">
+        <div class="sun-block">
+            <div class="sun"></div>
+        </div>
+        
+        <div class="city-back"></div>
 
 
 
@@ -27,6 +30,32 @@
         
     </div>
     <div class="trottoir">
+        <div class="trees-block"> 
+            <div class="tree-top">
+                <div class="trunck"></div>
+            </div>
+            <div class="tree-down"></div>  
+        </div>
+        <div class="trees-block">
+            <div class="tree-top">
+                <div class="trunck"></div>
+            </div>
+            <div class="tree-down"></div> 
+        </div>
+        <div class="trees-block">
+            <div class="tree-top">
+                <div class="trunck"></div>
+            </div>
+            <div class="tree-down"></div> 
+        </div>
+        <div class="trees-block">
+            <div class="tree-top">
+                <div class="trunck"></div>
+            </div>
+            <div class="tree-down"></div> 
+        </div>
+
+
         <div class="light-block">
 
             <div class="light-part-one">
