--- a/picture only css/index.html
+++ b/picture only css/index.html
@@ -14,7 +14,44 @@
             <div class="sun"></div>
         </div>
         
-        <div class="city-back"></div>
+        <div class="city-back">
+            <div class="building building-1"></div>
+            <div class="building building-2"></div>
+            <div class="building building-3"></div>
+            <div class="building building-4"></div>
+            <div class="building building-5"></div>
+            <div class="building building-6"></div>
+            <div class="building building-7"></div>
+            <div class="building building-8"></div>
+            <div class="building building-9"></div>
+            <div class="building building-10"></div>
+            <div class="building building-11"></div>
+            <div class="building building-12"></div>
+            <div class="building building-13"></div>
+            <div class="building building-14"></div>
+            <div class="building building-15"></div>
+            <div class="building building-16"></div>
+            <div class="building building-17"></div>
+            <div class="building building-18"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
 
 
 
