--- a/picture only css/index.html
+++ b/picture only css/index.html
@@ -12,6 +12,13 @@
 
 <body>
     <div class="sky">
+
+       
+            <div class="cloud"></div>
+            <div class="cloud-2"></div>
+            <div class="cloud-3"></div>
+
+
         <div class="sun-block">
             <div class="sun"></div>
         </div>
