--- a/picture only css/index.html
+++ b/picture only css/index.html
@@ -12,9 +12,11 @@
 
 <body>
     <div class="sky">
-        <div class="cloud"></div>
-        <div class="cloud-2"></div>
-        <div class="cloud-3"></div>
+        <div class="cloud cloud-1 "></div>
+        <div class="cloud cloud-2"></div>
+        <div class="cloud cloud-3"></div>
+        <div class="cloud cloud-4"></div>
+        <div class="cloud cloud-5"></div>
         <div class="sun-block">
             <div class="sun"></div>
         </div>
