added a car and animation for a car + changed @media for clouds

--- a/picture only css/index.html
+++ b/picture only css/index.html
@@ -291,6 +291,38 @@
         <div class="border-parts"></div>
     </div>
     <div class="road">
+        <div class="car-block">
+
+
+            <div class="car">
+                <div class="rect"></div>
+                <div class="front">
+                    <div class="window"></div>
+                </div>
+                <div class="b-tyres tyres"> <div class="circle"></div> </div>
+                <div class="bb-tyres tyres"> <div class="circle"></div> </div>
+                <div class="f-tyres tyres"> <div class="circle"></div> </div>
+                <div class="hood"></div>
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
         <div class="road-line">
             <div class="road-lines"></div>
             <div class="road-lines"></div>
